--- a/scss/slick.css
+++ b/scss/slick.css
@@ -144,7 +144,7 @@
 /*인디게이터 ul li button*/
 .main .slick-dots{bottom: -15px;}
 
-.slick-dots{justify-content: center !important; height: 16px; bottom: 10px;}
+.slick-dots{justify-content: center !important; height: 16px; bottom: 20px;}
 .slick-dots li{width: 16px !important; margin: 0 8px; filter: none !important; opacity: 0.3; display: inline-block; height: 16px;}
 .slick-dots li button{display: none;}
 
@@ -153,6 +153,8 @@
 .slick-dots li:nth-of-type(3n){background: url(../img/main_bullet03.png) no-repeat center;}
 
 .slick-dots li.slick-active{opacity: 1 !important;}
+
+.slick-current img{ box-shadow:  0px 20px 20px rgb(0 0 0 / 15%)}
 
 
 
