--- a/scss/sub.css
+++ b/scss/sub.css
@@ -25,6 +25,7 @@ body {
 p, button, a, h1, h2, h3, h4, h5, h6, tr, span, li, div, input, textarea, select, caption, table th, table td, span {
   font-family: "Noto Sans KR", sans-serif;
   text-decoration: none;
+  color: #1a1a1a;
 }
 
 ul, li {
@@ -50,13 +51,469 @@ img {
   width: 100%;
 }
 
+.up_down {
+  position: fixed;
+  z-index: 15;
+  right: 40px;
+  bottom: 140px;
+  cursor: pointer;
+}
+.up_down .up {
+  transition: 0.5s;
+}
+.up_down .up > img {
+  margin-top: 10px;
+}
+.up_down .down > img {
+  margin-top: 10px;
+}
+
+.up_down.up {
+  bottom: 155px;
+  position: fixed;
+}
+
+.up_down.down {
+  position: absolute;
+  top: 2380px;
+}
+
+.top_banner {
+  background-color: #FCFCC3;
+  margin: 0 auto;
+  width: 100%;
+  min-width: 1280px;
+  height: 80px;
+}
+.top_banner > .container {
+  max-width: 1280px;
+  position: relative;
+}
+.top_banner > .container img {
+  margin: 0 auto;
+}
+.top_banner > .container .btn {
+  position: absolute;
+  right: 0;
+  top: 20px;
+  width: 38px;
+  height: 38px;
+  background: url(../img/main_top_banner_close_btn.png) no-repeat center;
+  background-size: 76px 76px;
+  cursor: pointer;
+}
+
+.sub {
+  width: 180px;
+  position: fixed;
+  right: 0;
+  top: 130px;
+  z-index: 99;
+  transition: 0.5s ease-in-out 0.3s;
+}
+.sub .right_menu {
+  position: absolute;
+  top: 35%;
+  left: -70px;
+  z-index: -1;
+}
+.sub .right_menu::before {
+  content: ">>";
+  display: block;
+  position: absolute;
+  bottom: -20px;
+  left: 25px;
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
+  -webkit-animation: sidebar 3s 1s linear infinite;
+          animation: sidebar 3s 1s linear infinite;
+}
+.sub .right_box {
+  width: 180px;
+  background: #fff;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.1);
+}
+.sub .right_box .newlist h2, .sub .right_box .ranklist h2 {
+  width: 100%;
+  font-size: 17px;
+  text-align: left;
+  position: relative;
+  padding: 30px 0 18px 0;
+  margin: 0 0 0 40px;
+}
+.sub .right_box .newlist h2 img, .sub .right_box .ranklist h2 img {
+  padding: 7px 0 0 14px;
+}
+.sub .right_box .newlist .newlist_img, .sub .right_box .ranklist .newlist_img {
+  padding: 0 0 20px 0;
+  width: 100px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.sub .right_box .newlist .newlist_img ul, .sub .right_box .ranklist .newlist_img ul {
+  display: flex;
+}
+.sub .right_box .newlist .newlist_img ul li, .sub .right_box .ranklist .newlist_img ul li {
+  display: inline-block;
+  text-align: right;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border-radius: 100%;
+  background-color: #f5f5f5;
+}
+.sub .right_box .newlist .newlist_img ul li img, .sub .right_box .ranklist .newlist_img ul li img {
+  width: 100%;
+}
+.sub .right_box .newlist .ranklist_img, .sub .right_box .ranklist .ranklist_img {
+  padding: 0 0 20px 0;
+  width: 100px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.sub .right_box .newlist .ranklist_img ul, .sub .right_box .ranklist .ranklist_img ul {
+  display: flex;
+}
+.sub .right_box .newlist .ranklist_img ul li, .sub .right_box .ranklist .ranklist_img ul li {
+  display: inline-block;
+  text-align: right;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border-radius: 100%;
+  background-color: #f5f5f5;
+}
+.sub .right_box .newlist .ranklist_img ul li img, .sub .right_box .ranklist .ranklist_img ul li img {
+  width: 100%;
+}
+.sub .right_box .newlist .newlist_status, .sub .right_box .newlist .ranklist_status, .sub .right_box .ranklist .newlist_status, .sub .right_box .ranklist .ranklist_status {
+  width: 120px;
+  height: 1px;
+  background-color: #E9E9E9;
+  position: relative;
+  margin: 0 auto;
+}
+.sub .right_box .newlist .newlist_status .status, .sub .right_box .newlist .ranklist_status .status, .sub .right_box .ranklist .newlist_status .status, .sub .right_box .ranklist .ranklist_status .status {
+  height: 1px;
+  background-color: #EB1C26;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.sub .right_box .menu1, .sub .right_box .menu2, .sub .right_box .menu3, .sub .right_box .menu4 {
+  font-weight: bold;
+  width: 100%;
+  font-size: 17px;
+  text-align: left;
+  position: relative;
+  padding: 25px 0 0 0;
+  margin: 0 0 0 33px;
+}
+.sub .right_box .menu1 a, .sub .right_box .menu2 a, .sub .right_box .menu3 a, .sub .right_box .menu4 a {
+  font-size: 17px;
+}
+.sub .right_box .menu1 img, .sub .right_box .menu2 img, .sub .right_box .menu3 img, .sub .right_box .menu4 img {
+  padding: 7px 0 0 14px;
+}
+.sub .right_box .banner {
+  text-align: center;
+  padding: 23px 0 35px 0;
+}
+.sub .right_box .banner img {
+  width: 110px;
+}
+
+.sub.active {
+  right: -180px;
+}
+
+.sub.active .right_menu::before {
+  content: "<<";
+}
+
 main {
+  min-width: 1280px;
   background-color: #fff;
 }
-main #header .container {
-  border-bottom: 1px solid #d8d8d8;
+main #header {
+  width: 100%;
+  margin: 0 auto;
+  box-shadow: 0px 1px rgba(0, 0, 0, 0.1);
+  min-width: 1280px;
 }
-main #header .container .head_inner .header .top_menu ul li a {
+main #header > .container {
+  overflow: visible;
+  height: 120px;
+}
+main #header > .container .head_inner {
+  max-width: 1520px;
+  min-width: 1280px;
+  margin: 0 auto;
+  transition: 0.3s;
+  border-radius: 0 0 45px 45px;
+  height: 0;
+  position: relative;
+  z-index: 9999;
+}
+main #header > .container .head_inner .header {
+  max-width: 1280px;
+  position: relative;
+  z-index: 2;
+  height: 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+main #header > .container .head_inner .header .logo > img:nth-of-type(1) {
+  display: none;
+}
+main #header > .container .head_inner .header .logo > img:nth-of-type(2) {
+  display: block;
+}
+main #header > .container .head_inner .header .top_menu > ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main #header > .container .head_inner .header .top_menu > ul > li {
+  position: relative;
+  height: 120px;
+  line-height: 120px;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > a {
+  font-size: 18px;
+  font-weight: 400;
+  padding: 0 15px;
+  color: #1a1a1a;
+  line-height: 120px;
+  transition: 0.3s;
+  height: 120px;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub {
+  position: fixed;
+  left: 0;
+  top: 210px;
+  width: 100%;
+  max-width: 1280px;
+  min-width: 1152px;
+  padding: 50px 0 40px;
+  margin: 0 auto;
+  display: none;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box {
+  float: left;
+  position: relative;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul {
+  display: inline-block;
+  margin: 0 27px 0 0;
+  border-right: 1px solid #ebebeb;
+  position: relative;
+  height: 100%;
+  padding: 0 27px 0 0;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li {
+  line-height: 42px;
+  font-size: 16px;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li > a {
+  font-size: 16px;
+  line-height: 38px;
+  color: #5a5a5a;
+  position: relative;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li .arrow::after {
+  opacity: 0;
+  content: "";
+  display: block;
+  background: url("../img/icon_topmenu_arrow.png") no-repeat center center;
+  background-size: 8px 13px;
+  position: absolute;
+  left: 140px;
+  width: 8px;
+  height: 42px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: 0.3 ease-in-out;
+  visibility: hidden;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li > ul {
+  height: 410px;
+  position: absolute;
+  top: 0;
+  left: 180px;
+  padding: 0 30px 0 40px;
+  overflow-y: auto;
+  display: none;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li > ul > li a {
+  font-size: 16px;
+  line-height: 42px;
+  color: #5a5a5a;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li > ul.on {
+  display: block;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li > ul::-webkit-scrollbar {
+  width: 2px;
+  height: 100%;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li > ul::-webkit-scrollbar-thumb {
+  background-color: rgba(52, 52, 52, 0.75);
+  max-height: 300px;
+  border-right: 15px;
+  height: 100%;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li > ul::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.15);
+  border-right: 15px;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li.on .arrow::after {
+  content: "";
+  left: 135px;
+  height: 42px;
+  width: 8px;
+  opacity: 1;
+  visibility: visible;
+  transition: 0.5s ease-in-out;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box > ul > li.on ul {
+  display: block;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub .event {
+  padding: 0;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box_banner {
+  float: right;
+  padding: 8px 0 0 0;
+  text-align: center;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box_banner > ul {
+  display: flex;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box_banner > ul > li img {
+  border-radius: 15px;
+  width: 300px;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box_banner > ul > li p {
+  width: 300px;
+  line-height: 50px;
+  font-size: 15px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > .sub > .box_banner > ul > li:last-child {
+  margin: 0 0 0 30px;
+}
+main #header > .container .head_inner .header .top_menu > ul > li .small {
+  width: 145px;
+  padding: 30px 0 20px 0;
+  background: #fff;
+  border-radius: 0 0 20px 20px;
+  top: 120px;
+  position: absolute;
+  font-size: 18px;
+  text-align: center !important;
+  border: none;
+  min-width: 145px;
+  max-width: 145px;
+  transform: translateX(-50%);
+  left: 50%;
+}
+main #header > .container .head_inner .header .top_menu > ul > li .small > .box {
+  float: none;
+}
+main #header > .container .head_inner .header .top_menu > ul > li .small > .box > ul {
+  border: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+main #header > .container .head_inner .header .top_menu > ul > li > a::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0%;
+  bottom: 0;
+  left: 17px;
+  background-color: #ff3d44;
+  visibility: hidden;
+  transition: 0.3s;
+  height: 3px;
+}
+main #header > .container .head_inner .header .top_menu > ul > li:hover a::before {
+  width: calc(100% - 35px);
+  visibility: visible;
+}
+main #header > .container .head_inner .header .top_menu > ul > li:hover .sub {
+  visibility: visible;
+}
+main #header > .container .head_inner .header .member > img {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+main #header > .container .head_inner .header .member .logo {
+  display: flex;
+}
+main #header > .container .head_inner .header .member .logo .mypage {
+  margin-left: 0;
+}
+main #header > .container .head_inner .header .member .logo .cart {
+  padding-left: 35px;
+  position: relative;
+}
+main #header > .container .head_inner .header .member .logo .cart .count {
+  font-family: "Poppins", sans-serif;
+  position: absolute;
+  top: 0px;
+  right: -7px;
+  width: 19px;
+  height: 19px;
+  border-radius: 50px;
+  line-height: 19px;
+  font-size: 12px;
+  font-weight: 700;
+  text-align: center;
+  background-color: #ff3d44;
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+main #header > .container .head_inner .header .member .logo .search {
+  padding-left: 35px;
+}
+main #header > .container .head_inner .header .member .logo img:first-child {
+  display: block;
+}
+main #header > .container .head_inner .header .member .logo.active img:first-child {
+  display: none;
+}
+main #header > .container .head_inner.active #header {
+  box-shadow: none;
+}
+main #header > .container .head_inner.active {
+  background-color: #fff;
+  color: #1a1a1a;
+  box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.1);
+  height: 120px;
+}
+main #header > .container .head_inner.active.over {
+  height: 750px;
+}
+main #header > .container .head_inner.active.over1 {
+  height: 580px;
+}
+main #header > .container .head_inner.active.over2 {
+  height: 650px;
+}
+main #header > .container .head_inner.active .top_menu ul li a {
   color: #1a1a1a;
 }
 
@@ -201,7 +658,6 @@ main #header .container .head_inner .header .top_menu ul li a {
   top: 0;
   right: 0;
   z-index: 0;
-  border: 1px solid #e5e5e5;
   background-color: #fff;
   border-radius: 10px;
   width: 130px;
@@ -228,6 +684,10 @@ main #header .container .head_inner .header .top_menu ul li a {
 .contents .side_right .top_sec .list.on {
   overflow: visible;
   height: auto;
+  border: none;
+}
+.contents .side_right .top_sec .list.on ul {
+  border: 1px solid #e5e5e5;
 }
 .contents .side_right .filter_option {
   margin: 0 15px;
@@ -347,6 +807,7 @@ main #header .container .head_inner .header .top_menu ul li a {
 .contents .side_right .box ul li .box_inner .img_sec {
   position: relative;
   width: 300px;
+  transition: 0.3s ease-in-out;
 }
 .contents .side_right .box ul li .box_inner .img_sec img {
   background-color: #f5f5f5;
@@ -370,6 +831,9 @@ main #header .container .head_inner .header .top_menu ul li a {
   color: #6a6a6a;
   margin-bottom: 10px;
   display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .contents .side_right .box ul li .box_inner .tit_sec .sub_sec .hash {
   font-size: 12px;
@@ -405,10 +869,14 @@ main #header .container .head_inner .header .top_menu ul li a {
 .contents .side_right .box ul li .box_inner .img_sec:hover img {
   background-color: rgba(0, 0, 0, 0.1);
 }
+.contents .side_right .box ul li:nth-of-type(n+13) {
+  display: none;
+}
 .contents .side_right .page {
   margin-bottom: 60px;
   display: flex;
   justify-content: center;
+  cursor: pointer;
 }
 .contents .side_right .page a img {
   opacity: 0.6;
