--- a/scss/animation.css
+++ b/scss/animation.css
@@ -1,3 +1,34 @@
+@keyframes step1{
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(-2000px);
+    }
+}
+
+@keyframes step2{
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(-3000px);
+    }
+}
+
+@keyframes step3{
+    0%{
+        transform: translateX(-2000px);
+    }
+}
+
+@keyframes step4{
+    0%{
+        transform: translateX(-4000px);
+    }
+}
+
+
 @keyframes fadeInDown{
     0%{
         opacity: 0;
